--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "parcel build index.html  --no-minify --public-url ./",
     "postinstall": "yarn upgrade --pattern @tensorflow",
     "link-local": "yalc link",
-    "unlink-local": "yalc remove"
+    "unlink-local": "yalc remove",
+    "test": "jasmine src/test.ts"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^0.14.0",
@@ -15,6 +16,7 @@
     "babel-preset-env": "~1.6.1",
     "clang-format": "~1.2.2",
     "cross-env": "^5.1.6",
+    "jasmine": "^3.3.1",
     "parcel-bundler": "^1.8.1",
     "parcel-plugin-typescript": "^1.0.0",
     "src": "^1.1.2",
